# brasa

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPENDENCY_PROCESSING_ANALYSIS.md  DEPENDENCY_VERIFICATION.md  ERRORS.md  LICENSE  README.md  URLs.md  bvbg086.yaml  cli-companies.py  cli-ei.py  cli-full.py  cli-random.py  cli.py  companies-b3-plus.yaml  companies-b3.yaml  daily-b3.yaml  equity-options-b3.yaml  indexes-b3.yaml  pyproject.toml  test.py
.claude/: napkin.md  settings.json
.claude/plans/: abstract-soaring-pascal.md  abundant-fluttering-hummingbird.md  cheeky-chasing-penguin.md  drifting-exploring-ullman.md  dynamic-mixing-flame.md  floating-pondering-hartmanis.md  frolicking-inventing-fountain.md  glowing-baking-valiant.md  mighty-snuggling-ocean-agent-a4f6d817c72d0a883.md  mighty-snuggling-ocean-agent-a52b2cad903a798b0.md  mighty-snuggling-ocean.md  moonlit-meandering-fountain.md  mossy-percolating-pillow.md  parallel-hugging-rocket.md  piped-prancing-unicorn.md  spicy-dreaming-pearl.md  steady-bubbling-garden.md  woolly-forging-crane.md
.github/: HOW_TO_CREATE_INSTRUCTIONS.md  copilot-instructions.md
.github/agents/: Code Reviewer.agent.md  Template Builder.agent.md  prompt-builder.agent.md  prompt-engineer.agent.md
.github/instructions/: python.instructions.md  templates.instructions.md
.github/prompts/: plan-b3EquitiesRegister.prompt.md  plan-cotahistDailyPipeline.prompt.md  plan-cotahistYearlyPipeline.prompt.md  plan-datafusion-sql-interface.prompt.md  plan-duckdb-sql-interface.prompt.md  plan-templateInheritance.prompt.md
brasa/: __init__.py  api.py  cache.py  cli.py  engine.py  etl.py  meta.py  queries.py  templates.py  util.py
data/: ANBIMA_TPF_2019-01-02.txt  ANBIMA_TPF_VNA_2019-01-06.html  BD_Arbit.txt  CDIIDI.json  CDIIDI_2019-09-22.json  CONTRCAD-IPN.TXT  CONTRCAD.TXT  COTAHIST_D04012016.TXT  DeltaOpcoes.txt  Eletro.txt  Indic.txt  LFT_2022.xls  NegociosBalcao.csv  NegociosBalcao_2023-05-10.csv  PUWEB.TXT  Premio.txt  Ref_Vol.txt  Setorial B3 13-11-2023 (português).xlsx  Setorial B3 28-03-2023 (português).xlsx  StockIndexInfo_2021-09-06.json  SupVol.txt  TS190910.ex_  TaxaSwap.txt  deb_2021-04-20.txt  test.csv
docs/: API_REFERENCE.md  ARCHITECTURE.md  B3_INSTRUMENT_CLASSIFICATION_CODES.md  BRSR6_OPTIONS_LIQUIDITY_ANALYSIS.md  CLI.md  CONFIGURATION.md  DATALAKE_COMPANIES_INVESTIGATION.md  DEPENDENCY_GRAPH.md  DOWNLOAD_PLAN.md  ETL_PIPELINE_DESIGN.md  IDEAS.md  IMPLEMENTATION_INVALID_DOWNLOADS.md  INSTALL.md  INVALID_DOWNLOADS_QUICK_REFERENCE.md  LINTING.md  PROJECT_OVERVIEW.md  QUESTIONS.md  README.md  SUMMARY.md  TEMPLATES.md  USER_GUIDE.md  datasets.md
notebooks/: análise-MGLU3.ipynb  análise-MGLU3.xlsx  b3-cash-dividends.ipynb  b3-clean-up.ipynb  b3-equities-returns-correct-20210610.ipynb  b3-etfs.ipynb  b3-indexes.ipynb  b3-organize-companies-database.ipynb  b3-planilha-setores.ipynb  b3-trade-intraday.ipynb  base64.ipynb  brasa-adjust-prices.ipynb  brasa-andromeda-portfolio.ipynb  brasa-beta-regression.ipynb  brasa-coint-longshort.ipynb  brasa-cotahist-etfs.ipynb  brasa-di1-curves-standard-pca.ipynb  brasa-dol-adjust.ipynb  brasa-equities.ipynb  brasa-etfs-cointegration.ipynb  brasa-etfs-fill-gaps.ipynb  brasa-etfs-investment.ipynb  brasa-get-symbols.ipynb  brasa-lending-data.ipynb  brasa-longshort.ipynb  brasa-returns.ipynb  cotahist-equities.ipynb  cotahist.ipynb  create_calendar_table.ipynb  datalake-companies-investigation.ipynb  dol-casado.ipynb  duckdb-cotahist.ipynb  duckdb.ipynb  etfs-listados-20231014.csv  model.ipynb  my-portfolio.ipynb  pyarrow-1-futures-bcb-cotahist.ipynb  pyarrow-2-di1-curves.ipynb  pyarrow-3-intraday.ipynb  pyarrow-4-bvbg.ipynb  (+8 more)
plan/: data-industry-sectors-1.md  feature-cli-head-command-1.md  feature-dataset-catalog-1.md  feature-download-retry-1.md  feature-download-status-1.md  refactor-pandas-adapter-1.md  refactor-pandas-adapter-backend-decision-1.md  refactor-sqlite-connections-1.md
processors/: pyarrow-1-b3-cotahist.py  pyarrow-1-bcb.py  pyarrow-1-futures.py  pyarrow-2-dap-curves.py  pyarrow-2-di1-curves.py
scripts/: bvbg028_capture_expected_values.py  migrate_cache_ids.py  migrate_download_trials_status.py  migrate_listed_etfs.py  migrate_meta_db_fk.py  scan_download_args.py  wil12_candidates_report.py  wil12_symbol_changes.py
sql/: create-dataset-catalog.sql  create-meta-db.sql
templates/: AjustesDiarios.yaml  BD_Arbit.yaml  CDIIDI.yaml  CONTRCAD.yaml  COTAHIST_DAILY.yaml  COTAHIST_MONTHLY.yaml  COTAHIST_YEARLY.yaml  CenariosCurva.yaml  CenariosPrecoReferencia.yaml  CenariosSpot.yaml  DeltaOpcoes.yaml  Eletro.yaml  FPR.yaml  GetDetailsCompany.yaml  GetListedCashDividends.yaml  GetListedSupplementCompany.yaml  GetPortfolioDay.yaml  GetPortfolioDay_IndexStatistics.yaml  GetStockIndex.yaml  GetTheoricalPortfolio.yaml  ISIND.yaml  ISINS.yaml  IndexReport.yaml  Indic.yaml  NegociosBTB.yaml  NegociosBTB.yml  NegociosBalcao.yaml  NegociosIntraday.yaml  NegociosIntraday.yml  OpcoesAcoesEmAberto.yaml  PUWEB.yaml  Premio.yaml  PremioOpcaoAcao.yaml  PriceReport.yaml  SupVol.yaml  TaxaSwap.yaml  TaxasReferenciais.yaml  anbima-index-imab.yaml  b3-bvbg027.yaml  b3-bvbg028.yaml  (+76 more)
tests/: conftest.py  parser_td.py  test_acquisition_override.py  test_anbima_index_imab.py  test_arg_dsl.py  test_b3_cal.py  test_b3_equities_register_pipeline.py  test_b3_listed_funds.py  test_b3_paged_downloader.py  test_bcb_currency.py  test_bcb_sgs.py  test_bvbg028_datasets.py  test_bvbg087_integration.py  test_bvbg087_parser.py  test_cache.py  test_cache_drop.py  test_catalog.py  test_cli.py  test_cli_deps.py  test_cli_import.py  test_cli_map.py  test_cli_run_all.py  test_cli_setup.py  test_cli_smart_update.py  test_datasets_template.py  test_date_normalization.py  test_dependency_freshness.py  test_dependency_graph.py  test_dependency_resolver.py  test_doctor.py  test_download_args.py  test_download_plan.py  test_download_plan_smart_update.py  test_download_retry.py  test_download_status.py  test_download_trials_migration.py  test_downloads.py  test_engine_schema.py  test_extra_key_processing.py  test_fields.py  (+32 more)
(+238 files in other folders)
