[tool.poetry]
name = "brasa"
version = "0.0.1"
description = "Python library to extract finance market data from brazillian financial institutions: B3, ANBIMA, Tesouro Direto, CVM."
authors = ["wilsonfreitas <wilson.freitas@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [{ path = "brasa" }, { path = "templates" }]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
bizdays = "^1.0.8"
pandas = "^2.0.0"
xlrd = "^2.0.1"
regexparser = "^0.1.0"
pyyaml = "^6.0"
pyarrow = "^12.0.0"
progressbar2 = "^4.3.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
python-bcb = "0.1.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
matplotlib = "^3.7.1"
mypy = "^1.9.0"


[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
