[tool.poetry]
name = "brasa"
version = "0.0.1"
description = "Python library to extract finance market data from brazillian financial institutions: B3, ANBIMA, Tesouro Direto, CVM."
authors = ["wilsonfreitas <wilson.freitas@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [{ path = "brasa" }, { path = "templates" }]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
bizdays = "^1.0.15"
pandas = "^2.0.0"
numpy = "^2.0.0"
xlrd = "^2.0.1"
regexparser = "^0.1.0"
pyyaml = "^6.0"
pyarrow = "^19.0.0"
progressbar2 = "^4.3.2"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
python-bcb = "^0.3.2"
duckdb = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
matplotlib = "^3.7.1"
mypy = "^1.9.0"
types-pyyaml = "^6.0.12.20241230"
types-pytz = "^2024.2.0.20241221"
types-requests = "^2.32.0.20241016"
types-lxml = "^2024.12.13"
ruff = "^0.8.0"
pre-commit = "^4.0.0"


[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.mypy.overrides]]
module = ["pandas.*", "regexparser.*", "bcb.*", "pyarrow.*", "bizdays.*"]
ignore_missing_imports = true

# =============================================================================
# Ruff Configuration - Modern Python Linter & Formatter
# =============================================================================

[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (Black-compatible default)
line-length = 88

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Enable recommended rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]

# Rules to ignore
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "ARG"]
# Notebooks may have unused imports for demonstration
"notebooks/**/*" = ["F401", "E402"]

[tool.ruff.isort]
known-first-party = ["brasa"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Use Unix-style line endings
line-ending = "auto"

# Format docstrings
docstring-code-format = true
