[project]
name = "brasa"
version = "0.0.1"
description = "Python library to extract finance market data from brazillian financial institutions: B3, ANBIMA, Tesouro Direto, CVM."
authors = [
    { name = "wilsonfreitas", email = "wilson.freitas@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9.2",
    "bizdays>=1.0.15",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "xlrd>=2.0.1",
    "regexparser>=0.1.0",
    "pyyaml>=6.0",
    "pyarrow>=19.0.0",
    "progressbar2>=4.3.2",
    "html5lib>=1.1",
    "beautifulsoup4>=4.12.2",
    "python-bcb>=0.3.2",
    "duckdb>=1.2.0",
    "rich>=13.0.0",
    "openpyxl>=3.1.5",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.15.3",
    "matplotlib>=3.7.1",
    "mypy>=1.9.0",
    "types-pyyaml>=6.0.12.20241230",
    "types-pytz>=2024.2.0.20241221",
    "types-requests>=2.32.0.20241016",
    "types-lxml>=2024.12.13",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
docs = [
    "Sphinx>=5.1.1",
]
tests = [
    "pytest>=7.1.3",
]

[project.scripts]
brasa = "brasa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brasa", "templates"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests that require an internet connection (skip with --no-integration)",
]

[[tool.mypy.overrides]]
module = ["pandas.*", "regexparser.*", "bcb.*", "pyarrow.*", "bizdays.*"]
ignore_missing_imports = true

# =============================================================================
# Ruff Configuration - Modern Python Linter & Formatter
# =============================================================================

[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (Black-compatible default)
line-length = 88

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable recommended rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]

# Rules to ignore
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import not at top-level (intentional lazy imports used throughout)
    "RUF059",  # Unpacked variable is never used (new rule in ruff >=0.9)
    "RUF043",  # Metacharacters in match= pattern (new rule in ruff >=0.9)
    "PLW0177", # Comparing against NaN (new rule in ruff >=0.9)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "ARG"]
# Notebooks are exploratory code — relax rules that clash with interactive use
"notebooks/**/*" = [
    "F401",    # Unused imports (common for demonstration)
    "E402",    # Module-level import not at top of file
    "F811",    # Redefinition of unused variable (cell re-execution)
    "F821",    # Undefined name (cross-cell variable references)
    "B007",    # Loop control variable not used
    "B018",    # Useless expression (notebook cell display)
    "C408",    # Unnecessary dict() call
    "C416",    # Unnecessary comprehension
    "PTH",     # flake8-use-pathlib (not relevant for scratch code)
    "PLW2901", # Loop variable overwritten
    "PLR0911", # Too many return statements
    "PLR0915", # Too many statements
    "PLW0127", # Self-assignment
    "SIM116",  # Use dict instead of if/elif chain
    "RUF005",  # Consider iterable unpacking
    "ARG",     # Unused arguments
]

[tool.ruff.lint.isort]
known-first-party = ["brasa"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Use Unix-style line endings
line-ending = "auto"

# Format docstrings
docstring-code-format = true
